--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/studentManagement
+spring.datasource.url=jdbc:mysql://localhost:3306/studentManagement?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
-
 server.port=8081
